--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "express": "^4.18.2",
     "pug": "^3.0.2",
     "socket.io": "^4.5.4",
-    "ws": "^8.12.0"
+    "ws": "^8.12.0",
+    "@socket.io/admin-ui": "0.5.1"
   }
 }
